# bevy-cat-game

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: brainstorm.md  build-system.md  challenge.md  debt.md  decision-log.md  game-design.md  journal.md  playtest.md  recall.md  remember.md
.claude/memory/: decisions.md  game-design.md  journal.md  palace.md  tech-debt.md
spec/: spec.md
spec/phases/: 00-index.md  01-foundations.md  02-terrain.md  03-build-feel.md  04-blueprints.md  05-crafting.md  06-npc-cat.md  07-town.md  08-launch.md
src/: main.rs  save.rs  state.rs
src/animals/: mod.rs
src/building/: catalog_ui.rs  collision.rs  history.rs  interior.rs  mod.rs  placement.rs  ui.rs
src/camera/: mod.rs  occluder_fade.rs
src/crafting/: mod.rs
src/decoration/: catalog_ui.rs  hotbar_ui.rs  interior.rs  mod.rs  move_tool.rs  physics.rs  place_tool.rs  placement.rs  preview.rs  remove_tool.rs  rotation.rs
src/edit/: cheats.rs  highlight.rs  history.rs  mod.rs  placed_item.rs
src/gathering/: mod.rs
src/input/: mod.rs
src/inventory/: mod.rs
src/items/: form.rs  interior.rs  material.rs  mod.rs  registry.rs  tags.rs
src/memory/: journal.rs  mod.rs  tile_tint.rs  verbs.rs  world.rs
src/particles/: mod.rs
src/player/: mod.rs
src/torch/: mod.rs
src/ui/: chrome.rs  crafting_egui.rs  mod.rs
src/world/: biome.rs  chunks.rs  daynight.rs  edit.rs  edit_egui.rs  mod.rs  props.rs  terrain.rs  voxel.rs  (+1 more)
tests/: smoke.rs
tools/: build_animated_kitten.py  inspect_kitten_islands.py  prep_kittens_for_mixamo.py  test_clean_roundtrip.py
(+23 files in other folders)
