[package]
name = "bevy_cat_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["wayland"] }
noise = "0.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6"

# Enable optimizations for dependencies in dev builds (keeps game code debuggable)
[profile.dev.package."*"]
opt-level = 2

# Fast release builds
[profile.release]
lto = "thin"
codegen-units = 1
